# TTS-Notify

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.es.md  README.md  implement_v3.md
TTS_Notify/: CLAUDE.md  README.md  pyproject.toml
TTS_Notify/installers/: install-uv-mcp.ps1  install-uv-mcp.sh  install.sh
TTS_Notify/src/tts_notify/: __init__.py  main.py
TTS_Notify/src/tts_notify/core/: audio_pipeline.py  config_manager.py  coqui_engine.py  installer.py  models.py  tts_engine.py  voice_cloner.py
TTS_Notify/src/tts_notify/ui/cli/: main.py  mcp_config_generator.py
TTS_Notify/src/tts_notify/ui/mcp/: fastmcp_server.py
TTS_Notify/tests/: install_language_test.py
